Fix for newlines turning into missing-gyphs when using SVG fonts

Reviewed by Darin Adler.

https://bugs.webkit.org/show_bug.cgi?id=32710

Font::drawText() has three code paths:

  - drawTextUsingSVGFont()
  - drawSimpleText()
  - drawComplexText()

The latter two both have logic to replace newlines and tabs, as well
as a few other control characters that are considered spaces, with
spaces, before actually drawing the text. Previously the SVG font
path did not have this kind of logic.

This change introduces two helper functions in Font to do this space
replacement, which are then used for the simple path, the SVG path,
and the Qt implementation of the complex path.

Test: svg/custom/svg-fonts-in-html-linebreaks.html

WebCore:

* platform/graphics/Font.cpp:
(WebCore::Font::normalizeSpaces): Helper function
* platform/graphics/Font.h:
* platform/graphics/FontFastPath.cpp:
(WebCore::Font::glyphDataForCharacter): Use helper
* platform/graphics/qt/FontQt.cpp:
(WebCore::fromRawDataWithoutRef): Rename from "qstring"
(WebCore::Font::drawComplexText): Use helper
(WebCore::Font::floatWidthForComplexText): Use helper
(WebCore::Font::offsetForPositionForComplexText): Use helper
(WebCore::Font::selectionRectForComplexText): Use helper
* platform/text/CharacterNames.h: Add enum for 0x0020
* svg/SVGFont.cpp: Use helper to fix bug
(WebCore::SVGTextRunWalker::walk):

LayoutTests:

* svg/custom/resources/ABCFont.svg: Added. Font for test case
* svg/custom/svg-fonts-in-html-linebreaks-expected.txt: Added.
* svg/custom/svg-fonts-in-html-linebreaks.html: New test case

Canonical link: https://commits.webkit.org/43938@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@52525 268f45cc-cd09-0410-ab3c-d52691b4dbfc